internal/templating/test-resources/netpol/result-np-1.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    lagoon.sh/branch: environment-name
    lagoon.sh/version: v2.x.x
  labels:
    app.kubernetes.io/instance: isolation-network-policy
    app.kubernetes.io/managed-by: build-deploy-tool
    app.kubernetes.io/name: isolation-network-policy
    lagoon.sh/buildType: branch
    lagoon.sh/environment: environment-name
    lagoon.sh/environmentType: production
    lagoon.sh/project: example-project
    lagoon.sh/service: isolation-network-policy
    lagoon.sh/service-type: isolation-network-policy
    lagoon.sh/template: isolation-network-policy-0.1.0
  name: isolation-network-policy
spec:
  ingress:
  - from:
    - podSelector: {}
    - namespaceSelector:
        matchExpressions:
        - key: lagoon.sh/environment
          operator: DoesNotExist
  podSelector: {}
